--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,34 @@
 version: "3.7"
 services:
+
+  # prod-like container on http://localhost
+  client-prod:
+    build:
+      context: ./react
+      dockerfile: Dockerfile.prod
+    ports:
+      - '80:80'
+
+  # dev container on http://localhost:3000
+  client-dev:
+    build: ./react
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./react:/usr/src/app
+      - /usr/src/app/node_modules
+  
+  # express container
   api:
     build: ./express
     volumes:
       - ./express:/usr/src/app
-      - /usr/src/app/node_modules # So we don't need to run npm install locally - Taken from https://stackoverflow.com/a/37898591/6258471
+      - /usr/src/app/node_modules
     environment:
       MONGO_USERNAME: root
       MONGO_PASSWORD: password
+
+  # mongo db container
   mongo:
     image: mongo
     environment:
