--- a/docker-compose.prod-like.yml
+++ b/docker-compose.prod-like.yml
@@ -6,25 +6,18 @@ services:
     build: ./nginx
     ports:
       - '80:80'
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/wait-for-it.sh:/wait-for-it.sh
-      - ./nginx/entrypoint.sh:/entrypoint.sh
 
   # react container
   client:
-    build: ./react
-    volumes:
-      - ./react:/usr/src/app
-      - /usr/src/app/node_modules
+    build:
+      context: ./react
+      dockerfile: Dockerfile.prod
   
   # express container
   api:
     build: ./express
-    volumes:
-      - ./express:/usr/src/app
-      - /usr/src/app/node_modules
     environment:
+      NODE_ENV: 'production'
       MONGO_USERNAME: root
       MONGO_PASSWORD: password
 
