--- a/react/Dockerfile.prod
+++ b/react/Dockerfile.prod
@@ -1,5 +1,5 @@
 # Stage 1: Build React Artifact
-FROM node AS build-react
+FROM node:10 AS build-react
 
 WORKDIR /usr/src/app
 
@@ -11,12 +11,16 @@ COPY . .
 RUN npm run build
 
 # Stage 2: Build Nginx Image
-FROM nginx
+FROM nginx:stable
 
 COPY --from=build-react /usr/src/app/build /usr/share/nginx/html
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx.conf /etc/nginx/conf.d
+
+# forward request and error logs to docker log collector
+RUN ln -sf /dev/stdout /var/log/nginx/access.log \
+    && ln -sf /dev/stderr /var/log/nginx/error.log
 
 EXPOSE 80
 
